<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/reg_login_back"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/loginEmailText"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#673AB7"
        android:hint="@string/email_str"
        android:importantForAutofill="no"
        android:paddingStart="40dp"
        android:textColor="#673AB7"
        android:textColorHighlight="#673AB7"
        android:textColorLink="#673AB7"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginPasswordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/loginEnterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="49dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/EnterButton"
        android:onClick="openMap"
        android:src="@drawable/login_btn"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordText"
        tools:ignore="RedundantDescriptionCheck,SpeakableTextPresentCheck,UsingOnClickInXml" />

    <EditText
        android:id="@+id/loginPasswordText"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#673AB7"
        android:hint="@string/pwd_str"
        android:textColorHint="#78909C"
        android:importantForAutofill="no"
        android:paddingStart="40dp"
        android:textColor="#673AB7"
        android:textColorHighlight="#673AB7"
        android:textColorLink="#673AB7"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginEnterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailText"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
